<resources>
    <string name="app_name">First Choice Mart</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="image">Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">201826287505269</string>
    <string name="fb_login_protocol_scheme">fb201826287505269</string>

    <string name="server_client_id">442934224344-8c1to424auh7m66j35i3q3j5abtqsgj6.apps.googleusercontent.com</string>
    <string name="title_activity_drawer_new">First Choice Mart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">user@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_account">User</string>
    <string name="menu_categories">Categories</string>
    <string name="wishlist">WishList</string>
    <string name="purchase_history">Purchase history</string>
    <string name="my_wallet">My Wallet</string>
    <string name="account_info">Account Info</string>
    <string name="logout">logout</string>
    <string name="about_us">About us</string>>
    <string name="contact_us">Contact us</string>
    <string name="app_description"> ecommerce application ................</string>
    <string name="contact_group" />
    <string name="application_information_group" />
    <string name="price_below_10000"><![CDATA[Price < Below 10000]]></string>
    <string name="title_activity_addresss_picup">Map</string>
    <string name="share_us">Share Us</string>
    <string name="msg_token_fmt">fsdf</string>


</resources>
