<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_user_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/menu_cart" />

        <item
            android:id="@+id/wishlist"
            android:icon="@drawable/wishlist_bg"
            android:title="@string/wishlist" />


</menu>